--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
                     </div>
                 </div>
 
+                <div class="card-project">
+                    <img src="/assets/portfolio-mockup.png" alt="Project Image" class="card-image">
+                    <div class="card-content">
+                        <h3 class="card-title">Portfolio Mockup</h3>
+                        <p class="card-tools">HTML CSS</p>
+                        <div class="card-links">
+                            <a href="https://github.com/lucho20091/portfolio-mockup" target="_blank" class="card-link">GitHub</a>
+                            <a href="https://portfolio-mockup-lmms.netlify.app/" target="_blank" class="card-link live">Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <h1>HTML, CSS and JavaScript</h1>
             <div class="projects">
